03-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fintech-db
  namespace: fintech
spec:
  serviceName: fintech-db
  replicas: 1
  selector:
    matchLabels:
      app: fintech-db
  template:
    metadata:
      labels:
        app: fintech-db
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
          volumes:
            - name: db-storage
              emptyDir: {}
