04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-backend
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-backend
  template:
    metadata:
      labels:
        app: fintech-backend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: backend
          image: caedockerid/fintech-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
