05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-frontend
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-frontend
  template:
    metadata:
      labels:
        app: fintech-frontend
    spec:
      securityContext:
        runAsNonRoot: false
      containers:
        - name: frontend
          image: caedockerid/fintech-frontend:latest
          ports:
            - containerPort: 80
