06-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintech-db
  namespace: fintech
spec:
  type: ClusterIP
  selector:
    app: fintech-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-backend
  namespace: fintech
spec:
  type: ClusterIP
  selector:
    app: fintech-backend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-frontend
  namespace: fintech
spec:
  type: LoadBalancer
  selector:
    app: fintech-frontend
  ports:
    - port: 80
      targetPort: 80
